--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,10 +13,15 @@ build = "src/build.rs"
 tauri-build = { version = "1.0.0-beta.4" }
 
 [dependencies]
+anyhow = "1.0.47"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.0-beta.8", features = [] }
-tokio = { version = "*", features = ["net"] }       # use tokio that comes with tauri
+# use the same tokio that comes with tauri
+tokio = { version = "*", features = ["net", "io-util", "macros"] }
+tokio-native-tls = "0.3.0"
+nom = "7.1.0"
+mailparse = "0.13.6"
 
 [features]
 default = ["custom-protocol"]
