--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "app"
-version = "0.1.0"
+version = "1.0.0"
 description = "A Tauri App"
 authors = ["HareInWeed"]
 license = ""
@@ -16,8 +16,7 @@ tauri-build = { version = "1.0.0-beta.4" }
 anyhow = "1.0.47"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.0-beta.8", features = [] }
-# use the same tokio that comes with tauri
+tauri = { version = "1.0.0-beta.8", features = ["shell-open"] }
 tokio = { version = "*", features = ["net", "io-util", "macros"] }
 tokio-native-tls = "0.3.0"
 nom = "7.1.0"
