--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
   "name": "pop3-client-rs",
   "version": "1.0.0",
+  "description": "A POP3/POP3S client built with tauri",
+  "license": "MIT",
+  "author": {
+    "name": "HareInWeed",
+    "url": "https://github.com/HareInWeed/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/HareInWeed/pop3-client-rs.git"
+  },
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.6.0",
@@ -12,11 +22,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/dompurify": "^2.3.1",
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.177",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "dompurify": "^2.3.3",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
